@@ -809,6 +809,14 @@ https://trastero.speccy.org/cosas/FLeon/Fleon.htm
 -Incorporar menú de juegos david más visible en esta edición. Quizá en menú In Memoriam?
 
 
-
+-ventana de fileselector: si carpeta no cabe entera en pantalla, hacer scroll
 
 -soportar snapshots .nex con cabecera "NEXT" como exploding fist
+
+
+-libretro: https://docs.libretro.com/development/cores/developing-cores/#skeletor-sample-core
+cd /Users/cesarhernandez/Downloads/libretro-super
+./libretro-build.sh skeleton
+
+cd "/Users/cesarhernandez/Library/Application Support/RetroArch/cores"
+cp /Users/cesarhernandez/Downloads/libretro-super/dist/osx-x86_64/skeleton_libretro.dylib .
